# RAW12toPPM

./: CMakeLists.txt  RAW12.cpp  RAW12.h  README.md  main.cpp
include/RAW12PPM/: PPM.h  RAW12.h
libs/Debayer/: CMakeLists.txt
libs/Debayer/include/Debayer/: Debayer.h
libs/Debayer/src/: Debayer.cpp
src/: PPM.cpp  RAW12.cpp
